# cpp-opengl-gamedev

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
app_v01/: CMakeLists.txt
app_v01/src/: main.cpp
app_v01/src/animation/: anim_structs.h
app_v01/src/app/: graphics_layer.h  gui_layer.h  main.cpp
app_v01/src/app/def/: graphics_layer.cpp  gui_layer.cpp
app_v01/src/assets/: asset.h  asset_macros.h  asset_type.h  model_asset.h  text_asset.h
app_v01/src/assets/def/: stb_image.cpp
app_v01/src/environment/: app.h  buttons.h  entry_point.h  keyboard.h  keys.h  mouse.h  window.h
app_v01/src/environment/def/: keyboard.cpp  mouse.cpp  window.cpp
app_v01/src/gpu/wrappers/: gl_framebuffer.h  gl_shader.h  gl_shader_macros.h  gl_vao.h  gl_vbo.h
app_v01/src/gpu/wrappers/def/: gl_framebuffer.cpp  gl_shader.cpp  gl_vao.cpp
app_v01/src/imgui/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
app_v01/src/layers/: layer.h  layer_manager.h
app_v01/src/layers/def/: layer_manager.cpp
app_v01/src/macros/: singleton.h
app_v01/src/math/: math.h  math_vector.h
app_v01/src/render/shaders/: static_shader.h
app_v01/src/text/: text_structs.h
app_v01/src/util/strings/: strings.h
app_v01/src/util/vectors/: vectors.h
assets/shaders/static/: static_shader_frag.glsl  static_shader_vert.glsl
